Update CSS to fix layout issues on MissionView.

--- a/src/application/application.css
+++ b/src/application/application.css
@@ -61,7 +61,7 @@ Text {
 
 /* Begin MissionView.fxml specific CSS styling. */
 #gameStartButton{
-    -fx-font-size: 25px;
+
 }
 
 #contextLabel{
